Fix second demo problem (#133)
* fixed navbar not showing emails below lg screen size

* fixed AI dialog size

* fixed dashboard routes

* adjust text display for mobile version of the order

* Correct AI position

* modify payment path and pricing text description

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -105,5 +105,5 @@
 .iframe-container-btn {
   position: fixed;
   right: 20px;
-  bottom: 80px;
+  bottom: 60px;
 }
